@@ -47,7 +47,8 @@ ant -f build.main.xml -lib $ECJ_DIR
 # build stratego-di
 STR_INSTRUMENT_HOME=$STRATEGOXT_DEBUG_DIR/org.strategoxt.imp.debuggers.stratego.instrumentation
 cd $STR_INSTRUMENT_HOME
-ant -f build.main.xml -lib $ECJ_DIR "$@"
+ARGS="-lib $DIST_DIR_BASE/dist-libdsldi/release"
+ANT_OPTS="-Xss8m -Xmx1024m -server -XX:+UseParallelGC -XX:MaxPermSize=256m $EXTRA_ANT_OPTS" ant -f build.main.xml -lib $ECJ_DIR $ARGS "$@"
 
 if [ -n "$DIST_CONFIG" ]; then
 	# dist is configured, copy it
